--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
               src="./images/avatar-michelle.jpg"
               alt="Michelle Appleton's profil picture"
             />
+            <img
+              src="./images/avatar2.jpg"
+              alt="Delgorithm's profil picture"
+              class="delgorithm-profil"
+            />
           </picture>
           <p>
             Delgorithm
