--- a/index.html
+++ b/index.html
@@ -60,22 +60,26 @@
         <div class="article-preview-footer__hidden">
           <p>SHARE</p>
           <picture>
-            <a href="#"
-              ><img src="./images/icon-facebook.svg" alt="Icon Facebook"
-            /></a>
-            <a href="#"
-              ><img src="./images/icon-twitter.svg" alt="Icon Twitter"
-            /></a>
-            <a href="#"
-              ><img src="./images/icon-pinterest.svg" alt="Icon Pinterest"
-            /></a>
+            <a href="#">
+              <img src="./images/icon-facebook.svg" alt="Icon Facebook" />
+            </a>
+            <a href="#">
+              <img src="./images/icon-twitter.svg" alt="Icon Twitter" />
+            </a>
+            <a href="#">
+              <img src="./images/icon-pinterest.svg" alt="Icon Pinterest" />
+            </a>
           </picture>
         </div>
         <div class="icon-share">
           <picture>
-            <a href="#"
-              ><img src="./images/icon-share.svg" alt="Icon share"
-            /></a>
+            <a href="#">
+              <img
+                src="./images/icon-share.svg"
+                alt="Icon share"
+                class="icon-share-btn"
+              />
+            </a>
           </picture>
         </div>
       </section>
