--- a/index.html
+++ b/index.html
@@ -24,64 +24,68 @@
   </head>
   <body>
     <main>
-      <section class="article-preview">
+      <section class="img-background">
         <picture>
           <img src="./images/drawers.jpg" alt="article preview : drawers" />
         </picture>
-        <h1>
-          Shift the overall look and feel by adding these wonderful touches to
-          furniture in your home
-        </h1>
-        <p>
-          Ever been in a room and felt like something was missing? Perhaps it
-          felt slightly bare and uninviting. I’ve got some simple tips to help
-          you make any room feel complete.
-        </p>
       </section>
-      <section class="article-preview-footer">
-        <div class="article-preview-footer__visible">
-          <picture>
-            <img
-              src="./images/avatar-michelle.jpg"
-              alt="Michelle Appleton's profil picture"
-            />
-            <img
-              src="./images/avatar2.jpg"
-              alt="Delgorithm's profil picture"
-              class="delgorithm-profil"
-            />
-          </picture>
+      <section class="text">
+        <section class="article-preview">
+          <h1>
+            Shift the overall look and feel by adding these wonderful touches to
+            furniture in your home
+          </h1>
           <p>
-            Delgorithm
-            <br />
-            <span>28 Jun 2023</span>
+            Ever been in a room and felt like something was missing? Perhaps it
+            felt slightly bare and uninviting. I’ve got some simple tips to help
+            you make any room feel complete.
           </p>
-        </div>
-        <div class="article-preview-footer__hidden">
-          <p>SHARE</p>
-          <picture>
-            <a href="#">
-              <img src="./images/icon-facebook.svg" alt="Icon Facebook" />
-            </a>
-            <a href="#">
-              <img src="./images/icon-twitter.svg" alt="Icon Twitter" />
-            </a>
-            <a href="#">
-              <img src="./images/icon-pinterest.svg" alt="Icon Pinterest" />
-            </a>
-          </picture>
-        </div>
-        <div class="icon-share">
-          <picture>
-            <a href="#">
+        </section>
+        <section class="article-preview-footer">
+          <div class="article-preview-footer__visible">
+            <picture>
               <img
-                src="./images/icon-share.svg"
-                alt="Icon share"
-                class="icon-share-btn"
+                src="./images/avatar-michelle.jpg"
+                alt="Michelle Appleton's profil picture"
               />
-            </a>
-          </picture>
-        </div>
+              <img
+                src="./images/avatar2.jpg"
+                alt="Delgorithm's profil picture"
+                class="delgorithm-profil"
+              />
+            </picture>
+            <p>
+              Delgorithm
+              <br />
+              <span>28 Jun 2023</span>
+            </p>
+          </div>
+          <div class="article-preview-footer__hidden">
+            <p>SHARE</p>
+            <picture>
+              <a href="#">
+                <img src="./images/icon-facebook.svg" alt="Icon Facebook" />
+              </a>
+              <a href="#">
+                <img src="./images/icon-twitter.svg" alt="Icon Twitter" />
+              </a>
+              <a href="#">
+                <img src="./images/icon-pinterest.svg" alt="Icon Pinterest" />
+              </a>
+            </picture>
+          </div>
+          <div class="icon-share">
+            <picture>
+              <a href="#">
+                <img
+                  src="./images/icon-share.svg"
+                  alt="Icon share"
+                  class="icon-share-btn"
+                />
+              </a>
+            </picture>
+          </div>
+        </section>
       </section>
     </main>
     <script src="script.js"></script>
